Test the request body as well as response